--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="min-w-0">
                                         <p class="inline-block bg-slateAccent text-gold px-2 py-1 rounded font-tech">LOCATION</p>
-                                        <p class="ml-3 text-white">Seattle, WA</p>
+                                        <p class="inline-block ml-3 text-white">Seattle, WA</p>
                                     </div>
                                 </div>
                             </div>
