--- a/members/robby.html
+++ b/members/robby.html
@@ -4,22 +4,85 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Robby DeRosa — Ordo Orphika</title>
+  <style>
+    :root {
+      --dark-bg: #141414;
+      --gold: #d4af37;
+      --offwhite: #f5f5e6;
+      --card: #222225;
+      --accent: #79714b;
+    }
+    body {
+      margin: 0;
+      font-family: 'Montserrat', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+      background: var(--dark-bg); color: var(--offwhite);
+      min-height: 100vh;
+      letter-spacing: 0.01em;
+    }
+    .container {
+      max-width: 600px;
+      margin: 32px auto;
+      background: var(--card);
+      border-radius: 12px;
+      box-shadow: 0 4px 32px rgba(34,34,34,0.2);
+      padding: 32px 24px;
+      animation: fadeIn 1.1s;
+    }
+    @keyframes fadeIn { from { opacity:0; transform:translateY(32px); } to { opacity:1; transform:none; } }
+    a { color: var(--gold); text-decoration: none; transition: filter 0.2s; }
+    a:hover { filter: brightness(120%); text-decoration: underline; }
+    h1 {
+      color: var(--gold); margin-top: 0; font-size: 2.2rem;
+      letter-spacing: 0.05em; font-weight: bold;
+      text-shadow: 0 2px 12px #aaa22033;
+    }
+    h2 { color: var(--accent); margin-bottom: 0.4em; font-size: 1.25rem; text-transform: uppercase; letter-spacing: 0.03em; }
+    ul { margin-left: 1em; padding-left: 0; }
+    li { margin-bottom: 0.3em; font-size: 1.03em;}
+    img {
+      display: block;
+      max-width: 220px;
+      width: 100%;
+      margin: 0.6em 0 1.3em 0;
+      border-radius: 12px;
+      border: 2px solid var(--gold);
+      box-shadow: 0 2px 16px #d4af3722;
+      transition: transform 0.2s;
+    }
+    img:hover { transform: scale(1.025) rotate(-2deg); }
+    .back { font-size: 0.92em; color: var(--accent); display: inline-block; margin-bottom: 1.2em; }
+    .bio {
+      font-size: 1.12em; line-height: 1.65;
+      margin-bottom: 1.5em; color: var(--offwhite);
+    }
+    .links a { margin-right: 1.2em; color: var(--gold); font-weight: bold;}
+    .links a:before { content: '↗ '; color: var(--accent);}
+  </style>
 </head>
 <body>
-  <main class="container mx-auto px-6 py-12">
-    <a href="/index.html" class="text-sm mb-6 inline-block">← Back</a>
-    <h1>Robby DeRosa — Drums</h1>
-    <img src="/assets/pics/Robby.jpeg" alt="Robby DeRosa" style="max-width:300px;width:100%;border-radius:8px;">
-    <p>Robby DeRosa anchors the rhythm. (Placeholder bio — fill in details.)</p>
+  <main class="container">
+    <a href="/index.html" class="back">← Back</a>
+    <h1>Robby DeRosa <span style="font-size:1rem;color:var(--accent);font-weight:400;">— drums</span></h1>
+    <img src="/assets/pics/Robby.jpeg" alt="Robby DeRosa">
+    <div class="bio">
+      <strong>Robby DeRosa</strong> anchors the Ordo Orphika groove with a mix of technical skill, thunderous energy, and sly showmanship. From the first beat, Robby’s playing is both disciplined and wild—each fill and breakdown pushing the band’s sound deeper into the <span style="color:var(--gold);font-weight:bold;">esoteric funk n’ roll</span> domain.<br><br>
+
+      Inspired by progressive rock, vintage funk, and Seattle’s underground legacy,<br> Robby brings the pulse and unpredictability that powers Ordo Orphika’s explorations. On stage, he’s the rhythmic chaos behind the curtain—a quick laugh, a clever riff, and never afraid to drive a song off the rails (just to see if it comes back stronger).<br><br>
+
+      Whether tracking new music in the studio or detonating classic grooves live, Robby is the heartbeat—an original force in a city built for sonic oddballs.
+    </div>
     <h2>Previous releases</h2>
     <ul>
-      <li><a href="#">Single Z (Year)</a></li>
+      <li>
+        <a href="#">Single Z (2025)</a>
+      </li>
+      <!-- Add more releases here -->
     </ul>
     <h2>Links</h2>
-    <ul>
-      <li><a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer">YouTube Channel</a></li>
-      <li><a href="https://soundcloud.com/ordo-orphika/" target="_blank" rel="noopener noreferrer">SoundCloud</a></li>
-    </ul>
+    <div class="links">
+      <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer">YouTube Channel</a>
+      <a href="https://soundcloud.com/ordo-orphika/" target="_blank" rel="noopener noreferrer">SoundCloud</a>
+    </div>
   </main>
 </body>
 </html>
