--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
-                        <iframe id="player-thor" loading="lazy"         <div class="container mx-auto px-6 relative z-10">
+                        <iframe id="player-thor" loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/iCCGGqersgg?enablejsapi=1&origin=" frameborder="0" title="Thor's Daze Blues - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+        <div class="container mx-auto px-6 relative z-10">
             <h2 class="text-4xl font-display font-bold text-white text-center mb-16">CONTACT</h2>
             
                 <div class="max-w-5xl mx-auto">
