--- a/index.html
+++ b/index.html
@@ -374,12 +374,87 @@
                         <img src="assets/pics/band_pic.jpeg" alt="Ordo Orphika band members" style="border-radius:14px; width:100%; box-shadow:0 2px 24px #000c;">
                         </div>
                     </div>
-                    <div class="space-y-4">
-                        <!-- Your main bio text blocks go here, unchanged for now -->
-                        <!-- ... exactly as in your HTML ... -->
-                        <p>A word of wisdom ...</p>
-                        <!-- etc -->
+<div class="space-y-4">
+                    <p class="text-base leading-relaxed">
+                        A word of wisdom in foolish times is worth its weight in gold. And so it goes with the philosophy of transmutation at the heart of <span class="text-gold">Ordo Orphika</span>.
+                    </p>
+                    <p class="text-base leading-relaxed">
+                        Genre-agnostic, equal parts improvisation and orchestration, and with a spirit of cult-like inclusivity. We celebrate the ascent — and sometimes the descent — of man, through a society dedicated to our oldest rebel, the poet-musician and founder of the ancient mysteries, <span class="text-accent">Orpheus</span>.
+                    </p>
+                    <p class="text-base leading-relaxed">
+                        Join us on a journey of self-reflection and exploration as we seek perspective, connection, and the shared mysteries that bind us across time.
+                    </p>
+                    <p class="text-base leading-relaxed">
+                        <span class="text-gold">Ordo Orphika</span> is a 5 piece band from Seattle, their influences span a number of genres ranging from rock, <span class="text-gold font-semibold">blues</span>, <span class="text-gold font-semibold">funk</span>, jazz, lo fi, dance music, and <span class="text-gold font-semibold">psychedelia</span>. It features Seattle music veterans <span class="text-accent">Ian McKagan</span> (Kings of Cavalier, Morning Glory Revival) on guitar and <span class="text-accent">Woody Frank</span> (Whitney Monge, Map of the Woulds) on bass, as well as Saxophonist (Dr.) <span class="text-accent">Mathew Wooten</span>, Keys player <span class="text-accent">Jon Plaut</span>, and the handsome and mysterious drummer <span class="text-accent">Robby DeRosa</span> from the exotic far eastern land of New Jersey!
+                    </p>
+                    <p class="text-base leading-relaxed">
+                        <span class="text-gold font-semibold">What will you hear?</span>
+                    </p>
+                    <p class="text-base leading-relaxed">
+                        Rich harmonies, interweaving and genre bending soloist, lyrics rich with meaning, symbolism and mythology, both old and new. Diverse songs that aspire to take you on a journey to a higher place within yourself, or maybe just to find the lowest common denominator.
+                    </p>
+                    <p class="text-base leading-relaxed text-accent font-semibold">
+                        Come and join the cult today! We have snakes! 🐍
+                    </p>
+                    
+                    <!-- Member Photos -->
+                    <div class="pt-6">
+                        <h4 class="text-xl font-display text-gold mb-4 text-center">THE ORPHIC COUNCIL</h4>
+                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+                            <div class="text-center">
+                                <a href="members/ian.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/assets/pics/Ordo PhotoshootIan_Thumbnail.jpg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
+                                <h5 class="text-sm font-display text-gold">Ian McKagan</h5>
+                                <p class="text-gold font-tech text-xs">Guitar</p>
+                                <a href="members/ian.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
+                            </div>
+                            <div class="text-center">
+                                <a href="members/woody.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/assets/pics/Ordo PhotoshootWoody_Thumbnail.jpg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
+                                <h5 class="text-sm font-display text-gold">Woody Frank</h5>
+                                <p class="text-gold font-tech text-xs">Bass</p>
+                                <a href="members/woody.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
+                            </div>
+                            <div class="text-center">
+                                <a href="members/jon.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/assets/pics/Ordo PhotoshootJon_Thumbnail.jpg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
+                                <h5 class="text-sm font-display text-gold">Jon Plaut</h5>
+                                <p class="text-gold font-tech text-xs">Keys</p>
+                                <a href="members/jon.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
+                            </div>
+                            <div class="text-center">
+                                <a href="members/mathew.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/assets/pics/Ordo PhotoshootMathew_Thumbnail.jpg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
+                                <h5 class="text-sm font-display text-gold">Mathew Wooten</h5>
+                                <p class="text-gold font-tech text-xs">Saxophone</p>
+                                <a href="members/mathew.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
+                            </div>
+                            <div class="text-center">
+                                <a href="members/robby.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/assets/pics/Ordo PhotoshootRobby_Thumbnail.jpg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
+                                <h5 class="text-sm font-display text-gold">Robby DeRosa</h5>
+                                <p class="text-gold font-tech text-xs">Drums</p>
+                                <a href="members/robby.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
+                            </div>
+                        </div>
                     </div>
+
+                </div>
                     </div>
                     <h4 style="text-align:center" class="text-xl font-display text-gold mt-8 mb-4">THE ORPHIC COUNCIL</h4>
                     <div class="member-council">
