--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                             <div class="text-center">
                                 <a href="members/ian.html" class="block">
                                     <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                        <img src="assets/pics/Ordo Photoshoot/Ian_Thumbnail.jpg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                        <img src="assets/pics/Ordo_Photoshoot/Ian_Thumbnail.jpeg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Ian McKagan</h5>
@@ -418,7 +418,7 @@
                             <div class="text-center">
                                 <a href="members/woody.html" class="block">
                                     <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                        <img src="assets/pics/Ordo Photoshoot/Woody_Thumbnail.jpg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                        <img src="assets/pics/Ordo_Photoshoot/Woody_Thumbnail.jpeg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Woody Frank</h5>
@@ -428,7 +428,7 @@
                             <div class="text-center">
                                 <a href="members/jon.html" class="block">
                                     <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                        <img src="assets/pics/Ordo Photoshoot/Jon_Thumbnail.jpg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                        <img src="assets/pics/Ordo_Photoshoot/Jon_Thumbnail.jpeg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Jon Plaut</h5>
@@ -438,7 +438,7 @@
                             <div class="text-center">
                                 <a href="members/mathew.html" class="block">
                                     <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                        <img src="assets/pics/Ordo Photoshoot/Mathew_Thumbnail.jpg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                        <img src="assets/pics/Ordo_Photoshoot/Mathew_Thumbnail.jpeg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Mathew Wooten</h5>
@@ -448,7 +448,7 @@
                             <div class="text-center">
                                 <a href="members/robby.html" class="block">
                                     <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                        <img src="assets/pics/Ordo Photoshoot/Robby_Thumbnail.jpg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                        <img src="assets/pics/Ordo_Photoshoot/Robby_Thumbnail.jpeg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Robby DeRosa</h5>
